--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/estilos.css">
     <link rel="stylesheet" href="./src/css/responsivo.css">
+    <link rel="shortcut icon" type="imagex/png" href="./src/img/img_icon.png">
     <title>João Carlos Borges - Estudante Front End</title>
 </head>
 
