alterando do h1 e também reformulando o p da seção home, informações.

--- a/index.html
+++ b/index.html
@@ -35,17 +35,13 @@
     </header>
     <section class="home">
         <div class="informacoes">
-            <h1>João Carlos, estudante Desenvolvedor Front End</h1>
-            <p>Olá jovens 👋 Sou João Carlos Borges, licenciado em Física, pelo Instituto Federal de Santa Catarina, do
-                câmpus Araranguá e lecionei durante 6 anos. Em 2023 resolvi me arriscar e trocar de ramo profissional e
-                foi então que, após muitas pesquisas, percebi que a área do T.I poderia me proporcionar grandes
-                oportunidades e desafios.
+            <h1>Desenvolvedor Front End</h1>
+            <p>Sou João Carlos Borges, licenciado em Física, pelo Instituto Federal de Santa Catarina, do
+                câmpus Araranguá e lecionei durante 6 anos. Em 2023 resolvi fazer uma transição de carreira, percebi que a área do T.I poderia me proporcionar grandes oportunidades e novos desafios.
             </p>
-            <p>A partir de então, fui em busca de um curso nesta área, para que eu pudesse compreender melhor os
-                conceitos envolvidos. Após dias à procura, encontrei a “Escola Britânica de Artes Criativas & Tecnologia
-                (EBAC)”, onde conclui o curso “TI do Zero ao Pro”.</p>
-            <p>Atualmente estou estudando para me tornar um “Desenvolvedor Full Stack Python”, e momento estou nos
-                módulos relacionados ao Front End...</p>
+            <p>A partir de então, busquei conhecimento nesta área, para que eu pudesse compreender melhor os conceitos envolvidos. Após dias à procura, encontrei a “Escola Britânica de Artes Criativas & Tecnologia
+                (EBAC)”, onde conclui o curso “T.I do Zero ao Pro”.</p>
+            <p>Atualmente estou me aperfeiçoando para me tornar um “Desenvolvedor Full Stack Python”, cursando módulos relacionados ao Front End.</p>
             <ul class="redes-sociais">
                 <li>
                     <a href="https://www.linkedin.com/in/joao-carlos-borges/" title="Ir para o LinkedIn"
