--- a/public/index.html
+++ b/public/index.html
@@ -36,13 +36,16 @@
     <section class="home">
         <div class="informacoes">
             <h1>João Carlos, estudante Desenvolvedor Front End</h1>
-            <p>Olá jovens 👋 Formado em Licenciatura em Física, pelo Instituto Federal de Santa Catarina, campus
-                Araranguá, atuando como professor por 6 anos. Em 2023, resolve trocar de área, e depois de
-                algumas pesquisas vi que área do T.I tem grandes oportunidades e desafios.</p>
-            <p> Em seguida, foi a busca de um curso nesta área, para compreender melhor os conceitos envolvidos, depois
-                de alguns dias, achei a Escola Britânica de Artes Criativas & Tecnologia (EBAC). Desde então, conclui o curos TI do Zero ao Pro. E atualmente estou curso o Desenvolvedor Full Stack Python, os módulos relacionados ao Front End.</p>
-            <p></p>
-
+            <p>Olá jovens 👋 Sou João Carlos Borges, licenciado em Física, pelo Instituto Federal de Santa Catarina, do
+                câmpus Araranguá e lecionei durante 6 anos. Em 2023 resolvi me arriscar e trocar de ramo profissional e
+                foi então que, após muitas pesquisas, percebi que a área do T.I poderia me proporcionar grandes
+                oportunidades e desafios.
+            </p>
+            <p>A partir de então, fui em busca de um curso nesta área, para que eu pudesse compreender melhor os
+                conceitos envolvidos. Após dias à procura, encontrei a “Escola Britânica de Artes Criativas & Tecnologia
+                (EBAC)”, onde conclui o curso “TI do Zero ao Pro”.</p>
+            <p>Atualmente estou estudando para me tornar um “Desenvolvedor Full Stack Python”, e momento estou nos
+                módulos relacionados ao Front End...</p>
             <ul class="redes-sociais">
                 <li>
                     <a href="https://www.linkedin.com/in/joao-carlos-borges/" title="Ir para o LinkedIn"
@@ -69,6 +72,35 @@
                     </a>
                 </li>
             </ul>
+
+            <h4>Tecnologias</h4>
+            <ul class="tecnologias">
+                <li>
+                    <i class="fab fa-html5" title="HTML"></i>
+                </li>
+                <li>
+                    <i class="fab fa-css3-alt" title="CSS"></i>
+                </li>
+                <li>
+                    <i class="fab fa-js" title="JavaScript"></i>
+                </li>
+                <li>
+                    <i class="fab fa-bootstrap" title="Bootstrap"></i>
+                </li>
+                <li>
+                    <i class="fab fa-gulp" title="Gulp"></i>
+                </li>
+                <li>
+                    <i class="fab fa-grunt" title="GruntJS"></i>
+                </li>
+                <li>
+                    <i class="fab fa-sass" title="SASS"></i>
+                </li>
+                <li>
+                    <i class="fab fa-github" title="Github"></i>
+                </li>
+            </ul>
+
         </div>
         <div class="container-foto">
             <div class="foto sombra-interna">
@@ -86,10 +118,10 @@
                     <h3>Projeto Geovani Diretor</h3>
 
                     <div class="informacoes-projeto">
-                        <p>O projeto tinha como objetivo mostrar os principais tópicos da campanha. E
-                            também mostrar o que precisa levar na hora da votação, e também
-                            disponibilizar o plano completo para baixar em PDF.</p>
-                        <p>Usando as tecnologias, HTML, CSS e JavaScript.</p>
+                        <p>O objetivo do projeto era, além de mostrar os principais tópicos da campanha, também informar
+                            quais os documentos o público votante precisaria levar na hora da votação. Além disso,
+                            também era disponibilizado o Plano de Gestão completo para baixar em PDF.</p>
+                        <p>Tecnologias utilizadas: HTML, CSS e JavaScript.</p>
                     </div>
                 </a>
             </div>
@@ -100,8 +132,8 @@
                     <h3>Criando uma Landing Page</h3>
 
                     <div class="informacoes-projeto">
-                        <p> Criar uma landing page usando automação de tarefas com o gulp, e
-                            aplicando a metodologia BEM. Também usando o pré-processador SASS.</p>
+                        <p>O objetivo do projeto era criar uma “Landing page” utilizando a automação de tarefas com o
+                            gulp e aplicar a metodologia BEM e o pré-processador SASS.</p>
                     </div>
                 </a>
             </div>
@@ -112,8 +144,9 @@
                     <h3>Usando a biblioteca do Bootstrap</h3>
 
                     <div class="informacoes-projeto">
-                        <p>Usaando a biblioteca do Bootstrap na criação de uma página. Criando o carousel de imagens e o menu responsivo com esta biblioteca.</p>
-                        <p>Também tendo como base o HTML e CSS.</p>
+                        <p>O objetivo deste projeto era criar uma página utilizando-se da biblioteca do Bootstrap e, por
+                            meio dela, criar um carrosel de imagens e menu responsivo.</p>
+                        <p>Na base desse projeto também foi utilizado o HTML e CSS.</p>
                     </div>
                 </a>
             </div>
@@ -124,9 +157,8 @@
                     <h3>Calculadora de média de notas</h3>
 
                     <div class="informacoes-projeto">
-                        <p>Criar uma calculadora para calcular a média de notas de alunos. Criando a
-                            estrutura com o HTML, e estilizando com o CSS e a lógica fica por conta do
-                            JavaScript.</p>
+                        <p>O objetivo do projeto era criar uma calculadora para calcular a média de notas dos alunos. A
+                            estrutura foi criada com o HTML, a estilização com o CSS e a lógica com o JavaScript.</p>
                     </div>
                 </a>
             </div>
@@ -137,7 +169,8 @@
                     <h3>Página de notícias</h3>
 
                     <div class="informacoes-projeto">
-                        <p>Projeto utilizando a biblioteca do Bootstrap para criação de um carrossel de imagens e de cards. E também usando HTML, CSS e JavaScript. </p>
+                        <p>O objetivo do projeto era utilizar a bibilioteca do Bootstrap na criação de um carrosel de
+                            imagens e de cards. Aqui, também foi utilizado o HTML, CSS e JavaScript.</p>
                     </div>
                 </a>
             </div>
