--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./src/css/estilos.css">
     <link rel="stylesheet" href="./src/css/responsivo.css">
     <link rel="shortcut icon" type="imagex/png" href="./src/img/img_icon.png">
-    <title>João Carlos Borges - Estudante Front End</title>
+    <title>João Carlos Borges - Desenvolvedor Front End</title>
 </head>
 
 <body>
