--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/estilos.css">
     <link rel="stylesheet" href="./src/css/responsivo.css">
-    <link rel="shortcut icon" type="imagex/png" href="./src/img/img_icon.png">
+    <link rel="shortcut icon" type="imagex/png" href="./src/img/logo-JC.png">
     <title>João Carlos Borges - Desenvolvedor Front End</title>
 </head>
 
@@ -37,11 +37,14 @@
         <div class="informacoes">
             <h1>Desenvolvedor Front End</h1>
             <p>Sou João Carlos Borges, licenciado em Física, pelo Instituto Federal de Santa Catarina, do
-                câmpus Araranguá e lecionei durante 6 anos. Em 2023 resolvi fazer uma transição de carreira, percebi que a área do T.I poderia me proporcionar grandes oportunidades e novos desafios.
+                câmpus Araranguá e lecionei durante 6 anos. Em 2023 resolvi fazer uma transição de carreira, percebi que
+                a área do T.I poderia me proporcionar grandes oportunidades e novos desafios.
             </p>
-            <p>A partir de então, busquei conhecimento nesta área, para que eu pudesse compreender melhor os conceitos envolvidos. Após dias à procura, encontrei a “Escola Britânica de Artes Criativas & Tecnologia
+            <p>A partir de então, busquei conhecimento nesta área, para que eu pudesse compreender melhor os conceitos
+                envolvidos. Após dias à procura, encontrei a “Escola Britânica de Artes Criativas & Tecnologia
                 (EBAC)”, onde conclui o curso “T.I do Zero ao Pro”.</p>
-            <p>Atualmente estou me aperfeiçoando para me tornar um “Desenvolvedor Full Stack Python”, cursando módulos relacionados ao Front End.</p>
+            <p>Atualmente estou me aperfeiçoando para me tornar um “Desenvolvedor Full Stack Python”, já finalizei os
+                módulos relacionados ao Front End, no presente momento cursando os módulos relacionados ao back-end.</p>
             <ul class="redes-sociais">
                 <li>
                     <a href="https://www.linkedin.com/in/joao-carlos-borges/" title="Ir para o LinkedIn"
@@ -95,6 +98,13 @@
                 <li>
                     <i class="fab fa-github" title="Github"></i>
                 </li>
+                <li>
+                    <i class="fab fa-git" title="Git"></i>
+                </li>
+                <li>
+                    <i class="fab fa-react" title="React"></i>
+                </li>
+
             </ul>
 
         </div>
@@ -109,66 +119,131 @@
         <h2 class="titulo">Meus Projetos</h2>
         <div class="container-projetos">
             <div class="projeto ativo">
-                <a href="https://geovaniparadiretor.vercel.app/" target="_blank">
-                    <img src="./src/img/projeto_geovani.png" alt="imagem do site">
-                    <h3>Projeto Geovani Diretor</h3>
+                <img src="./src/img/projeto_geovani.png" alt="imagem do site">
 
-                    <div class="informacoes-projeto">
-                        <p>O objetivo do projeto era, além de mostrar os principais tópicos da campanha, também informar
-                            quais os documentos o público votante precisaria levar na hora da votação. Além disso,
-                            também era disponibilizado o Plano de Gestão completo para baixar em PDF.</p>
-                        <p>Tecnologias utilizadas: HTML, CSS e JavaScript.</p>
+                <div class="informacoes-projeto">
+                    <p>O objetivo do projeto era, além de mostrar os principais tópicos da campanha, também informar
+                        quais os documentos o público votante precisaria levar na hora da votação. Além disso,
+                        também era disponibilizado o Plano de Gestão completo para baixar em PDF.</p>
+                    <p>Tecnologias utilizadas: HTML, CSS e JavaScript.</p>
+                </div>
+                <div class="acesso">
+                    <div>
+                        <a href="https://github.com/joao-carlos-dev/projeto_geovani_diretor" target="_blank">
+                            <h3>Github</h3>
+                        </a>
                     </div>
-                </a>
+                    <div>
+                        <a href="https://geovaniparadiretor.vercel.app/" target="_blank">
+                            <h3>Deploy</h3>
+                        </a>
+                    </div>
+                </div>
             </div>
 
             <div class="projeto ativo">
-                <a href="https://sobrenaturalserie.vercel.app/" target="_blank">
+                <img src="./src/img/projeto_efood.png" alt="imagem do site">
+
+                <div class="informacoes-projeto">
+                    <p>Projeto final do curso Full Stack Python, dos módulos relacionados ao front-end. Que tinha como objetivo de criar uma aplicação, com o tema delivery de comida. Criar desde a página de apresentação dos produtos, adicionar ao carrinho, formulário de comprar, entrega. Tecnologias utilizadas, React, Typescript, styled components, redux e entre outras.</p>
+                </div>
+                <div class="acesso">
+                    <div>
+                        <a href="https://github.com/joao-carlos-dev/EFood" target="_blank">
+                            <h3>Github</h3>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://efood-mu-coral.vercel.app/" target="_blank">
+                            <h3>Deploy</h3>
+                        </a>
+                    </div>
+                </div>
+        </div>
+
+            <div class="projeto ativo">
                     <img src="./src/img/projeto_sobrenatural.png" alt="imagem do site">
-                    <h3>Criando uma Landing Page</h3>
 
                     <div class="informacoes-projeto">
                         <p>O objetivo do projeto era criar uma “Landing page” utilizando a automação de tarefas com o
                             gulp e aplicar a metodologia BEM e o pré-processador SASS.</p>
                     </div>
-                </a>
+                    <div class="acesso">
+                        <div>
+                            <a href="https://github.com/joao-carlos-dev/projeto_04_tarefa" target="_blank">
+                                <h3>Github</h3>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="https://sobrenaturalserie.vercel.app/" target="_blank">
+                                <h3>Deploy</h3>
+                            </a>
+                        </div>
+                    </div>
             </div>
 
             <div class="projeto ativo">
-                <a href="https://imbitubacity.web.app/" target="_blank">
                     <img src="./src/img/projeto_bootstrap.png" alt="imagem do site">
-                    <h3>Usando a biblioteca do Bootstrap</h3>
 
                     <div class="informacoes-projeto">
                         <p>O objetivo deste projeto era criar uma página utilizando-se da biblioteca do Bootstrap e, por
                             meio dela, criar um carrosel de imagens e menu responsivo.</p>
                         <p>Na base desse projeto também foi utilizado o HTML e CSS.</p>
                     </div>
-                </a>
+                    <div class="acesso">
+                        <div>
+                            <a href="https://github.com/joao-carlos-dev/mod_13_exercicio" target="_blank">
+                                <h3>Github</h3>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="https://imbitubacity.web.app/" target="_blank">
+                                <h3>Deploy</h3>
+                            </a>
+                        </div>
+                    </div>
             </div>
 
-            <div class="projeto ativo">
-                <a href="https://projeto-calculadora-medias-filis98hh-joao-carlos-zimba.vercel.app/" target="_blank">
+            <div class="projeto">
                     <img src="./src/img/projeto_cal_media_notas.png" alt="imagem do site">
-                    <h3>Calculadora de média de notas</h3>
 
                     <div class="informacoes-projeto">
                         <p>O objetivo do projeto era criar uma calculadora para calcular a média de notas dos alunos. A
                             estrutura foi criada com o HTML, a estilização com o CSS e a lógica com o JavaScript.</p>
                     </div>
-                </a>
+                    <div class="acesso">
+                        <div>
+                            <a href="https://github.com/joao-carlos-dev/projeto_calculadora_medias" target="_blank">
+                                <h3>Github</h3>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="https://projeto-calculadora-medias-filis98hh-joao-carlos-zimba.vercel.app/" target="_blank">
+                                <h3>Deploy</h3>
+                            </a>
+                        </div>
+                    </div>
             </div>
 
             <div class="projeto">
-                <a href="https://zimbagmers.web.app/" target="_blank">
                     <img src="./src/img/projeto_zimba_games.png" alt="imagem do site">
-                    <h3>Página de notícias</h3>
 
                     <div class="informacoes-projeto">
                         <p>O objetivo do projeto era utilizar a bibilioteca do Bootstrap na criação de um carrosel de
                             imagens e de cards. Aqui, também foi utilizado o HTML, CSS e JavaScript.</p>
                     </div>
-                </a>
+                    <div class="acesso">
+                        <div>
+                            <a href="https://github.com/joao-carlos-dev/mod_13_exercicio" target="_blank">
+                                <h3>Github</h3>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="https://zimbagmers.web.app/" target="_blank">
+                                <h3>Deploy</h3>
+                            </a>
+                        </div>
+                    </div>
             </div>
 
         </div>
