add mias projetos e add a funcionalidade de baixar curriculo

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,16 @@
 <html lang="pt-br">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-18SMD71XDZ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-18SMD71XDZ');
+    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
@@ -15,14 +25,13 @@
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/estilos.css">
     <link rel="stylesheet" href="./src/css/responsivo.css">
-    <link rel="shortcut icon" type="imagex/png" href="./src/img/logo-JC.png">
     <title>João Carlos Borges - Desenvolvedor Front End</title>
 </head>
 
 <body>
     <header class="cabecalho">
-        <a href="#">
-            <h1 class="logo">JC</h1>
+        <a href="../src/document/Currículo João EBAC_v2.pdf">
+            <h1 class="logo">BAIXAR CURRÍCULO</h1>
         </a>
 
         <nav class="menu">
@@ -45,7 +54,8 @@
                 (EBAC)”, onde conclui o curso “T.I do Zero ao Pro”.</p>
             <p>Atualmente estou me aperfeiçoando para me tornar um “Desenvolvedor Full Stack Python”, já finalizei os
                 módulos relacionados ao Front End, no presente momento cursando os módulos relacionados ao back-end.</p>
-            <ul class="redes-sociais">
+                <h4>Redes</h4>
+                <ul class="redes-sociais">
                 <li>
                     <a href="https://www.linkedin.com/in/joao-carlos-borges/" title="Ir para o LinkedIn"
                         target="_blank">
@@ -145,7 +155,10 @@
                 <img src="./src/img/projeto_efood.png" alt="imagem do site">
 
                 <div class="informacoes-projeto">
-                    <p>Projeto final do curso Full Stack Python, dos módulos relacionados ao front-end. Que tinha como objetivo de criar uma aplicação, com o tema delivery de comida. Criar desde a página de apresentação dos produtos, adicionar ao carrinho, formulário de comprar, entrega. Tecnologias utilizadas, React, Typescript, styled components, redux e entre outras.</p>
+                    <p>Projeto final do curso Full Stack Python, dos módulos relacionados ao front-end. Que tinha como
+                        objetivo de criar uma aplicação, com o tema delivery de comida. Criar desde a página de
+                        apresentação dos produtos, adicionar ao carrinho, formulário de comprar, entrega. Tecnologias
+                        utilizadas, React, Typescript, styled components, redux e entre outras.</p>
                 </div>
                 <div class="acesso">
                     <div>
@@ -159,91 +172,119 @@
                         </a>
                     </div>
                 </div>
-        </div>
-
-            <div class="projeto ativo">
-                    <img src="./src/img/projeto_sobrenatural.png" alt="imagem do site">
-
-                    <div class="informacoes-projeto">
-                        <p>O objetivo do projeto era criar uma “Landing page” utilizando a automação de tarefas com o
-                            gulp e aplicar a metodologia BEM e o pré-processador SASS.</p>
-                    </div>
-                    <div class="acesso">
-                        <div>
-                            <a href="https://github.com/joao-carlos-dev/projeto_04_tarefa" target="_blank">
-                                <h3>Github</h3>
-                            </a>
-                        </div>
-                        <div>
-                            <a href="https://sobrenaturalserie.vercel.app/" target="_blank">
-                                <h3>Deploy</h3>
-                            </a>
-                        </div>
-                    </div>
             </div>
 
             <div class="projeto ativo">
-                    <img src="./src/img/projeto_bootstrap.png" alt="imagem do site">
+                <img src="./src/img/projeto_sobrenatural.png" alt="imagem do site">
 
-                    <div class="informacoes-projeto">
-                        <p>O objetivo deste projeto era criar uma página utilizando-se da biblioteca do Bootstrap e, por
-                            meio dela, criar um carrosel de imagens e menu responsivo.</p>
-                        <p>Na base desse projeto também foi utilizado o HTML e CSS.</p>
+                <div class="informacoes-projeto">
+                    <p>O objetivo do projeto era criar uma “Landing page” utilizando a automação de tarefas com o
+                        gulp e aplicar a metodologia BEM e o pré-processador SASS.</p>
+                </div>
+                <div class="acesso">
+                    <div>
+                        <a href="https://github.com/joao-carlos-dev/projeto_04_tarefa" target="_blank">
+                            <h3>Github</h3>
+                        </a>
                     </div>
-                    <div class="acesso">
-                        <div>
-                            <a href="https://github.com/joao-carlos-dev/mod_13_exercicio" target="_blank">
-                                <h3>Github</h3>
-                            </a>
-                        </div>
-                        <div>
-                            <a href="https://imbitubacity.web.app/" target="_blank">
-                                <h3>Deploy</h3>
-                            </a>
-                        </div>
+                    <div>
+                        <a href="https://sobrenaturalserie.vercel.app/" target="_blank">
+                            <h3>Deploy</h3>
+                        </a>
                     </div>
+                </div>
+            </div>
+
+            <div class="projeto ativo">
+                <img src="./src/img/projeto_bootstrap.png" alt="imagem do site">
+
+                <div class="informacoes-projeto">
+                    <p>O objetivo deste projeto era criar uma página utilizando-se da biblioteca do Bootstrap e, por
+                        meio dela, criar um carrosel de imagens e menu responsivo.</p>
+                    <p>Na base desse projeto também foi utilizado o HTML e CSS.</p>
+                </div>
+                <div class="acesso">
+                    <div>
+                        <a href="https://github.com/joao-carlos-dev/curso_ebac_frontend/tree/mod_14_tarefa_projeto_03"
+                            target="_blank">
+                            <h3>Github</h3>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://imbitubacity.web.app/" target="_blank">
+                            <h3>Deploy</h3>
+                        </a>
+                    </div>
+                </div>
             </div>
 
             <div class="projeto">
-                    <img src="./src/img/projeto_cal_media_notas.png" alt="imagem do site">
+                <img src="./src/img/projeto_zimba_games.png" alt="imagem do site">
 
-                    <div class="informacoes-projeto">
-                        <p>O objetivo do projeto era criar uma calculadora para calcular a média de notas dos alunos. A
-                            estrutura foi criada com o HTML, a estilização com o CSS e a lógica com o JavaScript.</p>
+                <div class="informacoes-projeto">
+                    <p>O objetivo do projeto era utilizar a bibilioteca do Bootstrap na criação de um carrosel de
+                        imagens e de cards. Aqui, também foi utilizado o HTML, CSS e JavaScript.</p>
+                </div>
+                <div class="acesso">
+                    <div>
+                        <a href="https://github.com/joao-carlos-dev/mod_13_exercicio" target="_blank">
+                            <h3>Github</h3>
+                        </a>
                     </div>
-                    <div class="acesso">
-                        <div>
-                            <a href="https://github.com/joao-carlos-dev/projeto_calculadora_medias" target="_blank">
-                                <h3>Github</h3>
-                            </a>
-                        </div>
-                        <div>
-                            <a href="https://projeto-calculadora-medias-filis98hh-joao-carlos-zimba.vercel.app/" target="_blank">
-                                <h3>Deploy</h3>
-                            </a>
-                        </div>
+                    <div>
+                        <a href="https://zimbagmers.web.app/" target="_blank">
+                            <h3>Deploy</h3>
+                        </a>
                     </div>
+                </div>
             </div>
 
             <div class="projeto">
-                    <img src="./src/img/projeto_zimba_games.png" alt="imagem do site">
+                <img src="./src/img/projeto_lidaDeContato.png" alt="imagem do site">
 
-                    <div class="informacoes-projeto">
-                        <p>O objetivo do projeto era utilizar a bibilioteca do Bootstrap na criação de um carrosel de
-                            imagens e de cards. Aqui, também foi utilizado o HTML, CSS e JavaScript.</p>
+                <div class="informacoes-projeto">
+                    <p>Pojeto utilizando React, Styled Components e Redux. O React foi a biblioteca escolhida para criar
+                        interface,
+                        o Styled Components responsável por estilizar aplicação e o Redux para gerenciar o estado da
+                        aplicação do
+                        projeto. O projeto tem como foco criar uma lista de contatos, aonde podemos, consultar os
+                        contatos,
+                        por filtros, adicionar novos contatos, editar e remover contatos.</p>
+                </div>
+                <div class="acesso">
+                    <div>
+                        <a href="https://github.com/joao-carlos-dev/ListaDeContato" target="_blank">
+                            <h3>Github</h3>
+                        </a>
                     </div>
-                    <div class="acesso">
-                        <div>
-                            <a href="https://github.com/joao-carlos-dev/mod_13_exercicio" target="_blank">
-                                <h3>Github</h3>
-                            </a>
-                        </div>
-                        <div>
-                            <a href="https://zimbagmers.web.app/" target="_blank">
-                                <h3>Deploy</h3>
-                            </a>
-                        </div>
+                    <div>
+                        <a href="https://lista-contato-virid.vercel.app/" target="_blank">
+                            <h3>Deploy</h3>
+                        </a>
                     </div>
+                </div>
+            </div>
+
+            <div class="projeto">
+                <img src="./src/img/projeto_agendaContato.png" alt="imagem do site">
+
+                <div class="informacoes-projeto">
+                    <p>Este projeto é uma aplicação web básica de agenda de contatos desenvolvida utilizando HTML, CSS e JavaScript
+                        puro. A aplicação permite aos usuários adicionar nomes e números de telefone de contatos em uma tabela. 
+                        O objetivo é fornecer uma maneira simples e direta de manter uma lista de contatos diretamente no navegador.</p>
+                </div>
+                <div class="acesso">
+                    <div>
+                        <a href="https://github.com/joao-carlos-dev/agenda_contato/tree/main" target="_blank">
+                            <h3>Github</h3>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://agenda-contato-rho.vercel.app/" target="_blank">
+                            <h3>Deploy</h3>
+                        </a>
+                    </div>
+                </div>
             </div>
 
         </div>
