--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,6 @@
 
         gtag('config', 'G-18SMD71XDZ');
     </script>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
@@ -25,12 +24,13 @@
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/estilos.css">
     <link rel="stylesheet" href="./src/css/responsivo.css">
+    <link rel="shortcut icon" type="imagex/png" href="./src/img/logo-JC.png">
     <title>João Carlos Borges - Desenvolvedor Front End</title>
 </head>
 
 <body>
     <header class="cabecalho">
-        <a href="../src/document/Currículo João EBAC_v2.pdf">
+        <a href="./src/document/Currículo João Carlos Front.pdf" target="_blank">
             <h1 class="logo">BAIXAR CURRÍCULO</h1>
         </a>
 
@@ -54,8 +54,7 @@
                 (EBAC)”, onde conclui o curso “T.I do Zero ao Pro”.</p>
             <p>Atualmente estou me aperfeiçoando para me tornar um “Desenvolvedor Full Stack Python”, já finalizei os
                 módulos relacionados ao Front End, no presente momento cursando os módulos relacionados ao back-end.</p>
-                <h4>Redes</h4>
-                <ul class="redes-sociais">
+            <ul class="redes-sociais">
                 <li>
                     <a href="https://www.linkedin.com/in/joao-carlos-borges/" title="Ir para o LinkedIn"
                         target="_blank">
@@ -114,7 +113,6 @@
                 <li>
                     <i class="fab fa-react" title="React"></i>
                 </li>
-
             </ul>
 
         </div>
@@ -266,12 +264,15 @@
             </div>
 
             <div class="projeto">
-                <img src="./src/img/projeto_agendaContato.png" alt="imagem do site">
+                <img src="./src/img/agenda_contato.png" alt="imagem do site">
 
                 <div class="informacoes-projeto">
-                    <p>Este projeto é uma aplicação web básica de agenda de contatos desenvolvida utilizando HTML, CSS e JavaScript
-                        puro. A aplicação permite aos usuários adicionar nomes e números de telefone de contatos em uma tabela. 
-                        O objetivo é fornecer uma maneira simples e direta de manter uma lista de contatos diretamente no navegador.</p>
+                    <p>Este projeto é uma aplicação web básica de agenda de contatos desenvolvida utilizando HTML, CSS e
+                        JavaScript
+                        puro. A aplicação permite aos usuários adicionar nomes e números de telefone de contatos em uma
+                        tabela.
+                        O objetivo é fornecer uma maneira simples e direta de manter uma lista de contatos diretamente
+                        no navegador.</p>
                 </div>
                 <div class="acesso">
                     <div>
