--- a/public/index.html
+++ b/public/index.html
@@ -173,6 +173,30 @@
             </div>
 
             <div class="projeto ativo">
+                <img src="./src/img/igreja_01.png" alt="imagem do site">
+
+                <div class="informacoes-projeto">
+                    <p>Website sobre a Freguesia de Mirim (Imbituba-SC), explorando história e cultura local. Utiliza HTML,
+                        CSS (minificado e responsivo), JavaScript, Bootstrap, Swiper e Google Fonts. Gulp otimiza CSS e imagens. 
+                        Apresenta notícias, história da Sociedade Cultural, informações sobre a Lagoa do Mirim, eventos culturais
+                        (Festa do Divino, exposições), detalhes de visitação e contato. Design responsivo e otimizado para desempenho. 
+                        Contribuições são bem-vindas via GitHub.</p>
+                </div>
+                <div class="acesso">
+                    <div>
+                        <a href="https://github.com/joao-carlos-dev/freguesia_de_mirim/tree/main" target="_blank">
+                            <h3>Github</h3>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://scfreguesiademirim.web.app/" target="_blank">
+                            <h3>Deploy</h3>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="projeto ativo">
                 <img src="./src/img/projeto_sobrenatural.png" alt="imagem do site">
 
                 <div class="informacoes-projeto">
@@ -193,7 +217,7 @@
                 </div>
             </div>
 
-            <div class="projeto ativo">
+            <div class="projeto">
                 <img src="./src/img/projeto_bootstrap.png" alt="imagem do site">
 
                 <div class="informacoes-projeto">
