--- a/public/index.html
+++ b/public/index.html
@@ -173,7 +173,7 @@
             </div>
 
             <div class="projeto ativo">
-                <img src="./src/img/igreja_01.png" alt="imagem do site">
+                <img src="./src/img/fund_mirim_02.jpg" alt="imagem do site">
 
                 <div class="informacoes-projeto">
                     <p>Website sobre a Freguesia de Mirim (Imbituba-SC), explorando história e cultura local. Utiliza HTML,
