alterando secao projetos

--- a/index.html
+++ b/index.html
@@ -47,13 +47,12 @@
             <h1>Desenvolvedor Front End</h1>
             <p>Sou João Carlos Borges, licenciado em Física, pelo Instituto Federal de Santa Catarina, do
                 câmpus Araranguá e lecionei durante 6 anos. Em 2023 resolvi fazer uma transição de carreira, percebi que
-                a área do T.I poderia me proporcionar grandes oportunidades e novos desafios.
+                a área do T.I poderia me proporcionar grandes oportunidades e novos desafios. <br>
+                Portando, venho me aperfeiçoando na programação, já concluir os cursos, Introdução a programação e o T.I do zero ao Pro,
+                e o curso Profissão: Desenvolvedor Full Stack Python. Atualmente faço um curso presencial no SENAC – Tubarão,
+                que é o Programa Jovem Programador, que tem o intuito de qualificar profissionalmente na área de programação. 
             </p>
-            <p>A partir de então, busquei conhecimento nesta área, para que eu pudesse compreender melhor os conceitos
-                envolvidos. Após dias à procura, encontrei a “Escola Britânica de Artes Criativas & Tecnologia
-                (EBAC)”, onde conclui o curso “T.I do Zero ao Pro”.</p>
-            <p>Atualmente estou me aperfeiçoando para me tornar um “Desenvolvedor Full Stack Python”, já finalizei os
-                módulos relacionados ao Front End, no presente momento cursando os módulos relacionados ao back-end.</p>
+            
             <ul class="redes-sociais">
                 <li>
                     <a href="https://www.linkedin.com/in/joao-carlos-borges/" title="Ir para o LinkedIn"
@@ -197,6 +196,37 @@
             </div>
 
             <div class="projeto ativo">
+                <img src="./src/img/zimbalerolero.png" alt="imagem do site">
+
+                <div class="informacoes-projeto">
+                    <p>Projeto final do curso Full Stack Python, na EBAC. Que tinha como objetivo fazer uma aplicação
+                        completa, back e front end. A aplicação é uma rede social, aonde o usuário pode fazer seu cadastro
+                        e login, ao entra na conta, pode fazer um post, seguir um outro usuário, fazer comentários, e futuras
+                        melhorias, poder colocar foto de perfil, editar e excluir comentário e posts e entre outras.
+                        No front end, foi utilizado o React com o Vite, React Router DOM. No back end, foi utilizado o python
+                        e o Django REST Framework (DRF).
+                    </p>
+                </div>
+                <div class="acesso">
+                    <div>
+                        <a href="https://github.com/joao-carlos-dev/zimbaleroleroback" target="_blank">
+                            <h3>Back</h3>
+                        </a>
+                    </div>
+                    <div>
+                         <a href="https://github.com/joao-carlos-dev/zimbalerolero-front" target="_blank">
+                            <h3>Front</h3>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://zimbalerolero-front.vercel.app/" target="_blank">
+                            <h3>Deploy</h3>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="projeto">
                 <img src="./src/img/projeto_sobrenatural.png" alt="imagem do site">
 
                 <div class="informacoes-projeto">
@@ -286,32 +316,6 @@
                     </div>
                 </div>
             </div>
-
-            <div class="projeto">
-                <img src="./src/img/agenda_contato.png" alt="imagem do site">
-
-                <div class="informacoes-projeto">
-                    <p>Este projeto é uma aplicação web básica de agenda de contatos desenvolvida utilizando HTML, CSS e
-                        JavaScript
-                        puro. A aplicação permite aos usuários adicionar nomes e números de telefone de contatos em uma
-                        tabela.
-                        O objetivo é fornecer uma maneira simples e direta de manter uma lista de contatos diretamente
-                        no navegador.</p>
-                </div>
-                <div class="acesso">
-                    <div>
-                        <a href="https://github.com/joao-carlos-dev/agenda_contato/tree/main" target="_blank">
-                            <h3>Github</h3>
-                        </a>
-                    </div>
-                    <div>
-                        <a href="https://agenda-contato-rho.vercel.app/" target="_blank">
-                            <h3>Deploy</h3>
-                        </a>
-                    </div>
-                </div>
-            </div>
-
         </div>
 
         <button class="btn-mostrar-projetos">Mostar Mais</button>
