--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <body>
     <header class="cabecalho">
-        <a href="./src/document/Currículo João Carlos Front.pdf" target="_blank">
+        <a href="./src/document/Currículo João Carlos Borges.pdf" target="_blank">
             <h1 class="logo">BAIXAR CURRÍCULO</h1>
         </a>
 
